# materializr

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md
.github/workflows/: macos.yml  windows.yml
android/app/: build.gradle
android/app/jni/src/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/materializr/app/: MaterializrActivity.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/scripts/: setup-deps.sh
docs/: changelog.md  features.md  ipad-port-plan.md  releasing.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
ios/: CMakeLists.txt  Info.plist.in  LaunchScreen.storyboard  Materializr.storekit  README.md
ios/scripts/: setup-deps.sh
metadata/: com.materializr.app.yml
packaging/macos/: build-dmg.sh
packaging/windows/: installer.nsi
packaging/winget/: Materializr.Materializr.installer.yaml
shaders/: mesh.frag
src/: android_files.cpp  android_files.h  android_shims.cpp  gl_common.h  gl_shader.cpp  ios_files.mm  ios_main.cpp  ios_platform.h  ios_platform.mm  ios_storekit.h  ios_storekit.mm  ios_videowriter.mm  main.cpp  mobile_files.h  platform_defs.h  touch_mode.h  url_open.h
src/app/: Application.cpp  Application.h  Application_Dialogs.cpp  Application_InteractiveOps.cpp  Application_TouchShell.cpp  Application_Viewport.cpp  FaceOpControllers.cpp  FaceOpControllers.h  InteractiveOpController.cpp  InteractiveOpController.h  UserAxes.h  Window.cpp  Window.h
src/app/layout/: LayoutCommon.cpp
src/app/layout/imtouch/: ImTouchLayout.cpp
src/core/: Document.cpp  Document.h  History.cpp  History.h  NumFormat.h  NumParse.h  Operation.h  SelectionManager.cpp  SelectionManager.h  SheetSpec.h
src/io/: BrepIO.cpp  BrepIO.h  DxfExport.cpp  DxfExport.h  FileDialogs.cpp  FileDialogs.h  GifEncoder.cpp  GifEncoder.h  IgesIO.cpp  ImageExport.cpp  MeshDecimate.cpp  MeshDecimate.h  ObjExport.cpp  ObjExport.h  ProjectIO.cpp  ProjectIO.h  ProjectRecovery.cpp  ProjectRecovery.h  Settings.cpp  Settings.h  StepIO.cpp  StepIO.h  StlExport.h  StlIO.cpp  StlIO.h  ThreeMfExport.cpp  ThreeMfExport.h  Timelapse.cpp  Timelapse.h  VideoEncoder.cpp  VideoEncoder.h
src/modeling/: AlignOp.cpp  BlendCut.cpp  BooleanOp.cpp  BooleanOp.h  ChamferOp.cpp  ChamferOp.h  ConstructionPlaneOp.cpp  CopyOp.cpp  DefeatureOp.cpp  DefeatureOp.h  DeleteOp.cpp  DeleteOp.h  DuplicateSketchOp.cpp  DuplicateSketchOp.h  EdgeAnchor.cpp  EdgeAnchor.h  ExtrudeOp.cpp  FaceAnchor.cpp  FaceAnchor.h  FaceLineage.cpp  FaceLineage.h  FilletOp.cpp  FilletOp.h  GenerationLedger.cpp  GenerationLedger.h  MoveFaceOp.cpp  MoveFaceOp.h  MoveHoleOp.cpp  OperationFactory.cpp  PatternOp.cpp  PatternOp.h  PrimitiveOp.cpp  ProjectSketchOp.cpp  PushPullOp.cpp  PushPullOp.h  ReplayOp.cpp  ReplayOp.h  ResizeCylindricalOp.cpp  ResizeCylindricalOp.h  RevolveOp.cpp  (+19 more)
src/plugin/: Contributions.h  PluginContext.cpp  PluginContext.h
src/plugins/: BooleanPlugin.cpp  BrepIOPlugin.cpp  ConstructionPlanePlugin.cpp  CopyPlugin.cpp  DeletePlugin.cpp  ForceLink.cpp  ObjExportPlugin.cpp  PatternPlugin.cpp  PushPullPlugin.cpp  SketchPlugin.cpp  SplitBodyPlugin.cpp  StlImportPlugin.cpp  ThreeMfExportPlugin.cpp
src/timelapse/: Timelapse.h  VideoEncoder.cpp  VideoEncoder.h  android_videowriter.cpp
src/ui/: AboutDialog.cpp  DimensionInput.cpp  HelpPanel.cpp  HelpPanel.h  HistoryPanel.cpp  HistoryPanel.h  ItemsPanel.cpp  ItemsPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  StatusBar.cpp  Toolbar.cpp  Toolbar.h  TouchIcons.h  TouchWidgets.cpp  TouchWidgets.h  UpdateChecker.cpp  UpdateChecker.h  WelcomeScreen.cpp  WelcomeScreen.h
src/viewport/: Camera.cpp  Camera.h  EdgeRenderer.cpp  Gizmo.cpp  Gizmo.h  Picker.cpp  Picker.h  SelectionHighlight.cpp  SelectionHighlight.h  ShapeRenderer.cpp  ShapeRenderer.h  SketchRenderer.cpp  SketchRenderer.h  ViewCube.cpp  ViewCube.h  Viewport.cpp  Viewport.h
tests/: CMakeLists.txt  bench_stl_import.cpp  probe_anchor_coverage.cpp  probe_face_coverage.cpp  probe_fillet_repair.cpp  probe_moveface_shell.cpp  probe_rebuild.cpp  probe_shell.cpp  probe_thread_loft.cpp  probe_twist_face.cpp  probe_undoredo.cpp  test_blend_cut.cpp  test_duplicate_sketch.cpp  test_exchange_io.cpp  test_generative_edges.cpp  test_move_hole.cpp  test_moveface_hollow.cpp  test_recovery.cpp  test_reload_edit.cpp  test_resize_cylindrical.cpp  test_separate_body.cpp  test_shell.cpp  test_sketch_regions.cpp  test_stepped_hole_profile.cpp  test_stl_import.cpp  test_thread_profiles.cpp  test_thread_reflow.cpp  test_topo_chamfer_gen.cpp  test_topo_edge.cpp  test_topo_fillet_gen.cpp  test_topo_gen.cpp  test_topo_name.cpp  test_topo_pushpull.cpp  test_topo_shell.cpp  test_topo_thread.cpp  test_twist_face.cpp  test_unfold.cpp
